[gd_scene load_steps=11 format=2]

[ext_resource path="res://Sprites/OsirisParts/pen15.png" type="Texture" id=1]
[ext_resource path="res://Sprites/OsirisParts/right_hand.png" type="Texture" id=2]
[ext_resource path="res://Sprites/OsirisParts/left_hand.png" type="Texture" id=3]
[ext_resource path="res://Sprites/OsirisParts/head.png" type="Texture" id=4]
[ext_resource path="res://Sprites/OsirisParts/torso.png" type="Texture" id=5]
[ext_resource path="res://BodyPartsControl.gd" type="Script" id=6]
[ext_resource path="res://Sprites/OsirisParts/bp_bg.png" type="Texture" id=7]
[ext_resource path="res://Sprites/OsirisParts/right_foot.png" type="Texture" id=8]
[ext_resource path="res://Sprites/OsirisParts/left_foot.png" type="Texture" id=9]
[ext_resource path="res://Sprites/OsirisParts/eggplant.png" type="Texture" id=10]

[node name="BodyPartsControl" type="Control"]
margin_left = -80.0
margin_top = 42.0
margin_right = -40.0
margin_bottom = 82.0
script = ExtResource( 6 )

[node name="BPBG" type="TextureRect" parent="."]
margin_left = 149.0
margin_top = -93.0
margin_right = 189.0
margin_bottom = -53.0
texture = ExtResource( 7 )

[node name="BPBG2" type="TextureRect" parent="."]
margin_left = 149.0
margin_top = -54.0
margin_right = 189.0
margin_bottom = -14.0
texture = ExtResource( 7 )

[node name="BPBG3" type="TextureRect" parent="."]
margin_left = 105.0
margin_top = -54.0
margin_right = 145.0
margin_bottom = -13.0
texture = ExtResource( 7 )

[node name="BPBG4" type="TextureRect" parent="."]
margin_left = 192.0
margin_top = -53.0
margin_right = 231.0
margin_bottom = -13.0
texture = ExtResource( 7 )

[node name="BPBG5" type="TextureRect" parent="."]
margin_left = 149.0
margin_top = -16.0
margin_right = 189.0
margin_bottom = 24.0
texture = ExtResource( 7 )

[node name="BPBG6" type="TextureRect" parent="."]
margin_left = 105.0
margin_top = 19.0
margin_right = 145.0
margin_bottom = 59.0
texture = ExtResource( 7 )

[node name="BPBG7" type="TextureRect" parent="."]
margin_left = 192.0
margin_top = 19.0
margin_right = 232.0
margin_bottom = 57.0
texture = ExtResource( 7 )

[node name="HeadTexture" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 128.0
margin_top = -112.0
margin_right = 168.0
margin_bottom = -72.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 4 )

[node name="TorsoTexture" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 129.0
margin_top = -76.0
margin_right = 169.0
margin_bottom = -36.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 5 )

[node name="RightHandTexture" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 84.0
margin_top = -74.0
margin_right = 124.0
margin_bottom = -34.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 2 )

[node name="LeftHandTexture" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 171.0
margin_top = -73.0
margin_right = 211.0
margin_bottom = -33.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 3 )

[node name="Pen15Texture" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 128.0
margin_top = -36.0
margin_right = 168.0
margin_bottom = 4.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 1 )

[node name="EggplantTexture" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 128.0
margin_top = -36.0
margin_right = 168.0
margin_bottom = 4.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 10 )

[node name="RightFootTexture" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 84.0
margin_top = -1.0
margin_right = 124.0
margin_bottom = 39.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 8 )

[node name="LeftFootTexture" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 171.0
margin_right = 211.0
margin_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 9 )
